fixing spacing: last time

--- a/flask_app/HTML/static/css/topicTracker.css
+++ b/flask_app/HTML/static/css/topicTracker.css
@@ -513,8 +513,6 @@ body {
   position: relative;
   color: red;
   padding-inline-start: 0;
-  margin-top: -18px;
-  margin-bottom: 24px;
 }
 
 #bad-window-size {
